<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/item_title_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/inventory_name"
                android:textColor="@color/light_gray_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_inventory_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/distribution_user"
                android:textColor="@color/light_gray_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/remarks"
                android:textColor="@color/light_gray_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_text"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/asset_divider1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_not_inventory_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pending_inventory_assets"
            android:textColor="@color/light_gray_text"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="共条"
            android:textColor="@color/black_text"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/shape_dash_line"
        android:layerType="software" />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.gengcon.android.fixedassets.widget.MyRecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/white"
            android:overScrollMode="never" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="9dp"
        android:gravity="right"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_single_inventory"
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:background="@drawable/btn_orange_red"
            android:text="@string/single_inventory"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_start_inventory"
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            android:background="@drawable/btn_blue"
            android:text="@string/start_inventory"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_preview"
            android:layout_width="61dp"
            android:layout_height="33dp"
            android:visibility="gone"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_blue"
            android:text="@string/preview"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="61dp"
            android:layout_height="33dp"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:background="@drawable/btn_blue"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>