<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/item_title_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="105dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/phone_blue"
                    android:hint="@string/input_inventory_list_name"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/item_divider" />

            <LinearLayout
                android:id="@+id/tv_select_user_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="105dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_select_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/select_user"
                    android:textColor="@color/light_gray_text"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_right_arrow" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/item_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="105dp"
                    android:text="@string/remarks"
                    android:textColor="@color/black_text"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_remarks"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/phone_blue"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/item_divider" />

        </LinearLayout>

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <LinearLayout
            android:id="@+id/ll_asset"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_select_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pending_inventory_assets"
                    android:textColor="@color/gray_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="@color/blue"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/shape_dash_line"
                android:layerType="software" />

            <com.gengcon.android.fixedassets.widget.MyRecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:overScrollMode="never" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_all_select"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/all_select_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingTop="9dp"
            android:paddingRight="15dp"
            android:paddingBottom="9dp"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_unchecked" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/all_select"
                    android:textSize="17sp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_del"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:background="@drawable/btn_orange_red"
                android:minWidth="61dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/btn_blue"
                android:text="@string/add_asset"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>


    <com.gengcon.android.fixedassets.widget.PickerLinearLayout
        android:id="@+id/ll_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />

</RelativeLayout>